fail_crate/tests/duplicate_different_const.stderr
error: `const` specified more than once in main `#[new(...)]`.
 --> fail_crate/tests/duplicate_different_const.rs:4:14
  |
4 | #[new(const, const = false)]
  |              ^^^^^
