fail_crate/tests/duplicate_different_const.rs
use inew::New;

#[derive(New)]
#[new(const, const = false)]
struct A;

fn main() {}
